<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">YT Downloader</string>
    <string name="hint_url">Вставьте ссылку на YouTube видео</string>
    <string name="btn_download">Скачать</string>
    <string name="label_quality">Выберите качество:</string>
    <string name="quality_144">144p</string>
    <string name="quality_240">240p</string>
    <string name="quality_360">360p</string>
    <string name="quality_480">480p</string>
    <string name="quality_720">720p (HD)</string>
    <string name="quality_1080">1080p (Full HD)</string>
    <string name="status_waiting">Ожидание...</string>
    <string name="status_downloading">Загрузка: %1$d%%</string>
    <string name="status_completed">Готово!</string>
    <string name="status_error">Ошибка: %1$s</string>
    <string name="notification_channel_name">Загрузки</string>
    <string name="notification_channel_desc">Уведомления о загрузке видео</string>
    <string name="error_invalid_url">Неверная ссылка</string>
    <string name="error_network">Ошибка сети</string>
    <string name="open_folder">Открыть папку</string>
</resources>
